--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -19,7 +19,7 @@
                         <div class="col-12">
                             <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
                         </div>
-                        <div class="col-12 menu-burger" id="menuBurger">&#9776;</div>
+                        <div class="col-12 menu-burger" id="menuBurger"><span class="menu-burger--clr">&#9776;</span></div>
                         <div class="col-12">
                             <ul class="row list site-navigation" id="siteNav">
                                     <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">about</a></li>
@@ -49,6 +49,164 @@
             </div>
         </div>
     </div>
+    <main class="container">
+        <section class="row section section-serv">
+            <div class="col-12 section-title">
+                <p class="prg section-title__templ">We work with</p>
+                <h2 class="prg section-title__main">Amazing services</h2>
+            </div>
+            <div class="col-12">
+                <ul class="row list serv-list">
+                    <li class="col-12 item serv-list__item">
+                        <div class="row">
+                            <div class="col-3 pt-4">
+                                <svg class="serv-list__icon">
+                                        <use href="./img/icon/sprite.svg#clock"></use>
+                                </svg>
+                            </div>
+                            <div class="col-9 serv-list__info">
+                                    <h3 class="prg serv-list__title">photography</h3>
+                                    <p class="prg serv-list__prg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="col-12 item serv-list__item">
+                            <div class="row">
+                                <div class="col-3 pt-4">
+                                    <svg class="serv-list__icon">
+                                            <use href="./img/icon/sprite.svg#line"></use>
+                                    </svg>
+                                </div>
+                                <div class="col-9 serv-list__info">
+                                        <h3 class="prg serv-list__title">web design</h3>
+                                        <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                </div>
+                            </div>
+                    </li>
+                    <li class="col-12 item serv-list__item">
+                            <div class="row">
+                                <div class="col-3 pt-4">
+                                    <svg class="serv-list__icon">
+                                            <use href="./img/icon/sprite.svg#computer"></use>
+                                    </svg>
+                                </div>
+                                <div class="col-9 serv-list__info">
+                                        <h3 class="prg serv-list__title">creativity</h3>
+                                        <p class="prg serv-list__prg">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                </div>
+                            </div>
+                    </li>
+                    <li class="col-12 item serv-list__item">
+                            <div class="row">
+                                <div class="col-3 pt-4">
+                                    <svg class="serv-list__icon">
+                                            <use href="./img/icon/sprite.svg#book"></use>
+                                    </svg>
+                                </div>
+                                <div class="col-9 serv-list__info">
+                                        <h3 class="prg serv-list__title">seo</h3>
+                                        <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                                </div>
+                            </div>
+                    </li>
+                    <li class="col-12 item serv-list__item">
+                            <div class="row">
+                                <div class="col-3 pt-4">
+                                    <svg class="serv-list__icon">
+                                            <use href="./img/icon/sprite.svg#home"></use>
+                                    </svg>
+                                </div>
+                                <div class="col-9 serv-list__info">
+                                        <h3 class="prg serv-list__title">css/html</h3>
+                                        <p class="prg serv-list__prg">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                                </div>
+                            </div>
+                    </li>
+                    <li class="col-12 item serv-list__item">
+                            <div class="row">
+                                <div class="col-3 pt-4">
+                                    <svg class="serv-list__icon">
+                                            <use href="./img/icon/sprite.svg#square"></use>
+                                    </svg>
+                                </div>
+                                <div class="col-9 serv-list__info">
+                                        <h3 class="prg serv-list__title">digital</h3>
+                                        <p class="prg serv-list__prg">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                </div>
+                            </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="row section team-section">
+            <div class="col-12 section-title">
+                    <p class="prg section-title__templ">We work with</p>
+                    <h2 class="prg section-title__main">Amazing services</h2>
+                    <p class="prg section-title__char pt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            </div>
+            <div class="col-12">
+                <ul class="list row portfolio">
+                    <li class="col-12 item worker">
+                        <figure>
+                            <div class="worker__box">
+                                <a href="#" class="link worker__link">
+                                    <img class="worker__img" src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
+                                </a>
+                                <ul class="social-icons">
+                                    <li class="social-icons__item"><a href="#" class="link social-icons__link facebook"></a></li>
+                                    <li class="social-icons__item"><a href="#" class="link social-icons__link twitter"></a></li>
+                                    <li class="social-icons__item"><a href="#" class="link social-icons__link pinterest"></a></li>
+                                    <li class="social-icons__item"><a href="#" class="link social-icons__link instagram"></a></li>
+                                </ul>
+                            </div>
+                            <figcaption>
+                                <p class="worker-name"><a href="#">Matthew Dix</a></p>
+                                <p class="worker-profession"><a href="#">Graphic Design</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="cart">
+                        <figure>
+                            <div class="worker__box">
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
+                                </a>
+                                <ul class="social-icons">
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                </ul>
+                            </div>
+                            <figcaption>
+                                <p class="name"><a href="#">Christopher Campbell</a></p>
+                                <p class="profession"><a href="#">Branding/UX design</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="cart">
+                        <figure>
+                            <div class="worker__box">
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
+                                </a>
+                                <ul class="social-icons">
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                </ul>
+                            </div>
+                            <figcaption>
+                                <p class="name"><a href="#">Michael Fertig</a></p>
+                                <p class="profession"><a href="#">Developer</a></p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
     <script src="./scripts/menu-burger.js"></script>
 </body>
 </html>
