--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -5,169 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/bootstrap-grid.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Tenth</title>
+    <title>tenth</title>
 </head>
 <body>
-    <h1 class="visually-hidden">Share your holiday dreams</h1>
-    <div class="container-fluid banner-wrap">
-        <div class="row">
-            <div class="col-12">
-                <header class="page-header">
-                    <nav class="row page-nav">
-                        <div class="col-12">
-                            <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
-                        </div>
-                        <div class="col-12 menu-burger" id="menuBurger"><span class="menu-burger--clr">&#9776;</span></div>
-                        <div class="col-12">
-                            <ul class="row list site-navigation" id="siteNav">
-                                    <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">about</a></li>
-                                    <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">service</a></li>
-                                    <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">work</a></li>
-                                    <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">blog</a></li>
-                                    <li class="col-12 item site-navigation__item"><a href="#" class="link site-navigation__link">contact</a></li>
-                                    <li class="col-6 item site-navigation__item site-navigation__item--cart-pg"><a href="#" class="link site-navigation__link site-navigation__link--small">
-                                        <svg class="site-navigation__icon">
-                                            <use href="./img/icon/sprite.svg#cart"></use>
-                                        </svg>
-                                    </a></li>
-                                    <li class="col-6 item site-navigation__item site-navigation__item--cart-pg"><a href="#" class="link site-navigation__link site-navigation__link--small">
-                                        <svg class="site-navigation__icon">
-                                            <use href="./img/icon/sprite.svg#search"></use>
-                                        </svg>
-                                    </a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </header>
-            </div>
-            <div class="col-12 banner-info">
-                <p class="prg banner-info__templ">Creative Template</p>
-                <p class="prg banner-info__main">Welcome to MoGo</p>
-                <button class="button button__banner">Learn More</button>
-            </div>
+    <h1 class="visually-hidden">Mogo - Amazing services</h1>
+    <div class="banner-wrap">
+        <header class="container page-header">
+            <nav class="page-nav">
+                <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
+                <ul class="list site-navigation">
+                    <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">about</a></li>
+                    <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">service</a></li>
+                    <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">work</a></li>
+                    <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">blog</a></li>
+                    <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">contact</a></li>
+                    <li class="item site-navigation__item site-navigation__item--cart"><a href="#" class="link site-navigation__link site-navigation__link--small">
+                        <svg class="site-navigation__icon">
+                            <use href="./img/icon/sprite.svg#cart"></use>
+                        </svg>
+                    </a>
+                    </li>
+                    <li class="item site-navigation__item site-navigation__item--cart"><a href="#" class="link site-navigation__link site-navigation__link--small">
+                        <svg class="site-navigation__icon">
+                            <use href="./img/icon/sprite.svg#search"></use>
+                        </svg>
+                    </a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="banner-info">
+            <p class="prg banner-info__templ">Creative Template</p>
+            <p class="prg banner-info__main">Welcome to MoGo</p>
+            <button class="button button__banner">Learn More</button>
         </div>
     </div>
     <main class="container">
-        <section class="row section section-serv">
-            <div class="col-12 section-title">
-                <p class="prg section-title__templ">We work with</p>
-                <h2 class="prg section-title__main">Amazing services</h2>
-            </div>
-            <div class="col-12">
-                <ul class="row list serv-list">
-                    <li class="col-12 item serv-list__item">
-                        <div class="row">
-                            <div class="col-3 pt-4">
-                                <svg class="serv-list__icon">
-                                        <use href="./img/icon/sprite.svg#clock"></use>
-                                </svg>
-                            </div>
-                            <div class="col-9 serv-list__info">
-                                    <h3 class="prg serv-list__title">photography</h3>
-                                    <p class="prg serv-list__prg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="col-12 item serv-list__item">
-                            <div class="row">
-                                <div class="col-3 pt-4">
-                                    <svg class="serv-list__icon">
-                                            <use href="./img/icon/sprite.svg#line"></use>
-                                    </svg>
-                                </div>
-                                <div class="col-9 serv-list__info">
-                                        <h3 class="prg serv-list__title">web design</h3>
-                                        <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                </div>
-                            </div>
-                    </li>
-                    <li class="col-12 item serv-list__item">
-                            <div class="row">
-                                <div class="col-3 pt-4">
-                                    <svg class="serv-list__icon">
-                                            <use href="./img/icon/sprite.svg#computer"></use>
-                                    </svg>
-                                </div>
-                                <div class="col-9 serv-list__info">
-                                        <h3 class="prg serv-list__title">creativity</h3>
-                                        <p class="prg serv-list__prg">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                </div>
-                            </div>
-                    </li>
-                    <li class="col-12 item serv-list__item">
-                            <div class="row">
-                                <div class="col-3 pt-4">
-                                    <svg class="serv-list__icon">
-                                            <use href="./img/icon/sprite.svg#book"></use>
-                                    </svg>
-                                </div>
-                                <div class="col-9 serv-list__info">
-                                        <h3 class="prg serv-list__title">seo</h3>
-                                        <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-                                </div>
-                            </div>
-                    </li>
-                    <li class="col-12 item serv-list__item">
-                            <div class="row">
-                                <div class="col-3 pt-4">
-                                    <svg class="serv-list__icon">
-                                            <use href="./img/icon/sprite.svg#home"></use>
-                                    </svg>
-                                </div>
-                                <div class="col-9 serv-list__info">
-                                        <h3 class="prg serv-list__title">css/html</h3>
-                                        <p class="prg serv-list__prg">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
-                                </div>
-                            </div>
-                    </li>
-                    <li class="col-12 item serv-list__item">
-                            <div class="row">
-                                <div class="col-3 pt-4">
-                                    <svg class="serv-list__icon">
-                                            <use href="./img/icon/sprite.svg#square"></use>
-                                    </svg>
-                                </div>
-                                <div class="col-9 serv-list__info">
-                                        <h3 class="prg serv-list__title">digital</h3>
-                                        <p class="prg serv-list__prg">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                </div>
-                            </div>
-                    </li>
-                </ul>
-            </div>
+        <section>
+            <p class="first-section-p">We work with</p>
+            <h2>Amazing services</h2>
+            <ul class="services">
+                <li class="clock">
+                    <h3>photography</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="line">
+                    <h3>web design</h3>
+                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="computer">
+                    <h3>creativity</h3>
+                    <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="book">
+                    <h3>seo</h3>
+                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                </li>
+                <li class="home">
+                    <h3>css/html</h3>
+                    <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                </li>
+                <li class="digital">
+                    <h3>digital</h3>
+                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+            </ul>
         </section>
-        <section class="row section team-section">
-            <div class="col-12 section-title">
-                    <p class="prg section-title__templ">We work with</p>
-                    <h2 class="prg section-title__main">Amazing services</h2>
-                    <p class="prg section-title__char pt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-            </div>
-            <div class="col-12">
-                <ul class="list row portfolio">
-                    <li class="col-12 item worker">
+        <section>
+                <p class="first-section-p">Who we are</p>
+                <h2>Meet our team</h2>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                <ul class="portfolio">
+                    <li class="cart">
                         <figure>
-                            <div class="worker__box">
-                                <a href="#" class="link worker__link">
-                                    <img class="worker__img" src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
+                            <div class="image-box">
+                                <a href="#" class="img-link">
+                                    <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
                                 </a>
                                 <ul class="social-icons">
-                                    <li class="social-icons__item"><a href="#" class="link social-icons__link facebook"></a></li>
-                                    <li class="social-icons__item"><a href="#" class="link social-icons__link twitter"></a></li>
-                                    <li class="social-icons__item"><a href="#" class="link social-icons__link pinterest"></a></li>
-                                    <li class="social-icons__item"><a href="#" class="link social-icons__link instagram"></a></li>
+                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
+                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
+                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
+                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
                                 </ul>
                             </div>
                             <figcaption>
-                                <p class="worker-name"><a href="#">Matthew Dix</a></p>
-                                <p class="worker-profession"><a href="#">Graphic Design</a></p>
+                                <p class="name"><a href="#">Matthew Dix</a></p>
+                                <p class="profession"><a href="#">Graphic Design</a></p>
                             </figcaption>
                         </figure>
                     </li>
                     <li class="cart">
                         <figure>
-                            <div class="worker__box">
+                            <div class="image-box">
                                 <a href="#" class="img-link">
                                     <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
                                 </a>
@@ -186,7 +116,7 @@
                     </li>
                     <li class="cart">
                         <figure>
-                            <div class="worker__box">
+                            <div class="image-box">
                                 <a href="#" class="img-link">
                                     <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
                                 </a>
@@ -204,9 +134,17 @@
                         </figure>
                     </li>
                 </ul>
-            </div>
         </section>
     </main>
-    <script src="./scripts/menu-burger.js"></script>
+    <footer class="container">
+        <div class="copyright">
+            <span>&#169; 2016 MoGo free PSD template by</span>
+            <address>Laaqiq</address>
+        </div>
+        <form action="#">
+            <input type="email" placeholder="   Your Email..." name="email">
+            <button type="submit">subscribe</button>
+        </form>
+    </footer>
 </body>
 </html>
