Fixed BEM class name

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -41,109 +41,215 @@
         </div>
     </div>
     <main class="container">
-        <section>
-            <p class="first-section-p">We work with</p>
-            <h2>Amazing services</h2>
-            <ul class="services">
-                <li class="clock">
-                    <h3>photography</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+        <section class="section section--serv">
+            <div class="section-title">
+                <p class="prg section-title__templ">We work with</p>
+                <h2 class="prg section-title__main">Amazing services</h2>
+            </div>
+            <ul class="list serv-list">
+                <li class="item serv-list__item">
+                    <svg class="serv-list__icon">
+                            <use href="./img/icon/sprite.svg#clock"></use>
+                    </svg>
+                    <div class="serv-list__info">
+                            <h3 class="prg serv-list__title">photography</h3>
+                            <p class="prg serv-list__prg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="line">
-                    <h3>web design</h3>
-                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="item serv-list__item">
+                    <svg class="serv-list__icon">
+                            <use href="./img/icon/sprite.svg#line"></use>
+                    </svg>
+                    <div class="serv-list__info">
+                            <h3 class="prg serv-list__title">web design</h3>
+                            <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="computer">
-                    <h3>creativity</h3>
-                    <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                <li class="item serv-list__item">
+                    <svg class="serv-list__icon">
+                            <use href="./img/icon/sprite.svg#computer"></use>
+                    </svg>
+                    <div class="serv-list__info">
+                            <h3 class="prg serv-list__title">creativity</h3>
+                            <p class="prg serv-list__prg">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
                 </li>
-                <li class="book">
-                    <h3>seo</h3>
-                    <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                <li class="item serv-list__item">
+                    <svg class="serv-list__icon">
+                            <use href="./img/icon/sprite.svg#book"></use>
+                    </svg>
+                    <div class="serv-list__info">
+                            <h3 class="prg serv-list__title">seo</h3>
+                            <p class="prg serv-list__prg">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+                    </div>
                 </li>
-                <li class="home">
-                    <h3>css/html</h3>
-                    <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                <li class="item serv-list__item">
+                    <svg class="serv-list__icon">
+                            <use href="./img/icon/sprite.svg#home"></use>
+                    </svg>
+                    <div class="serv-list__info">
+                            <h3 class="prg serv-list__title">css/html</h3>
+                            <p class="prg serv-list__prg">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                    </div>
                 </li>
-                <li class="digital">
-                    <h3>digital</h3>
-                    <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                </li>
+                    <li class="item serv-list__item">
+                            <svg class="serv-list__icon">
+                                    <use href="./img/icon/sprite.svg#square"></use>
+                            </svg>
+                            <div class="serv-list__info">
+                                    <h3 class="prg serv-list__title">digital</h3>
+                                    <p class="prg serv-list__prg">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </div>
+                    </li>
             </ul>
         </section>
-        <section>
-                <p class="first-section-p">Who we are</p>
-                <h2>Meet our team</h2>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <ul class="portfolio">
-                    <li class="cart">
-                        <figure>
-                            <div class="image-box">
-                                <a href="#" class="img-link">
-                                    <img src="./img/portfolio/dix.jpg" alt="Matthew Dix" width="380px" height="470px">
+        <section class="section section--team">
+            <div class="section-title">
+                    <p class="prg section-title__templ">Who we are</p>
+                    <h2 class="prg section-title__main">Meet our teams</h2>
+                    <p class="prg section-title__char">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            </div>
+                <ul class="list portfolio">
+                    <li class="item worker">
+                        <figure class="worker__fgr">
+                            <div class="worker__box">
+                                <a href="#" class="link worker__link">
+                                    <img src="./img/portfolio/dix.jpg" class="worker__img" alt="Matthew Dix" width="380px" height="470px">
                                 </a>
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
-                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
-                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
-                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                <ul class="list social-icons">
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#pinterest"></use>
+                                            </svg>  
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
-                            <figcaption>
-                                <p class="name"><a href="#">Matthew Dix</a></p>
-                                <p class="profession"><a href="#">Graphic Design</a></p>
+                            <figcaption class="worker__figcn">
+                                <p class="prg worker__name"><a href="#" class="link worker__link--name">Matthew Dix</a></p>
+                                <p class="prg worker__profession"><a href="#" class="link worker__link--profession">Graphic Design</a></p>
                             </figcaption>
                         </figure>
                     </li>
-                    <li class="cart">
-                        <figure>
-                            <div class="image-box">
-                                <a href="#" class="img-link">
-                                    <img src="./img/portfolio/campbell.jpg" alt="Christopher Campbell" width="380px" height="470px">
+                    <li class="item worker">
+                        <figure class="worker__fgr">
+                            <div class="worker__box">
+                                <a href="#" class="link worker__link">
+                                    <img src="./img/portfolio/campbell.jpg" class="worker__img" alt="Christopher Campbell" width="380px" height="470px">
                                 </a>
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
-                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
-                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
-                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                <ul class="list social-icons">
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#pinterest"></use>
+                                            </svg>  
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
-                            <figcaption>
-                                <p class="name"><a href="#">Christopher Campbell</a></p>
-                                <p class="profession"><a href="#">Branding/UX design</a></p>
+                            <figcaption class="worker__figcn">
+                                <p class="prg worker__name"><a href="#" class="link worker__link--name">Christopher Campbell</a></p>
+                                <p class="prg worker__profession"><a href="#" class="link worker__link--profession">Branding/UX design</a></p>
                             </figcaption>
                         </figure>
                     </li>
-                    <li class="cart">
-                        <figure>
-                            <div class="image-box">
-                                <a href="#" class="img-link">
-                                    <img src="./img/portfolio/fertig.jpg" alt="Michael Fertig" width="380px" height="470px">
+                    <li class="item worker">
+                        <figure class="worker__fgr">
+                            <div class="worker__box">
+                                <a href="#" class="link worker__link">
+                                    <img src="./img/portfolio/fertig.jpg" class="worker__img" alt="Michael Fertig" width="380px" height="470px">
                                 </a>
-                                <ul class="social-icons">
-                                    <li class="social-icon"><a href="#" class="facebook"></a></li>
-                                    <li class="social-icon"><a href="#" class="twitter"></a></li>
-                                    <li class="social-icon"><a href="#" class="pinterest"></a></li>
-                                    <li class="social-icon"><a href="#" class="instagram"></a></li>
+                                <ul class="list social-icons">
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#pinterest"></use>
+                                            </svg>  
+                                        </a>
+                                    </li>
+                                    <li class="item social-icons__item">
+                                        <a href="#" class="link social-icons__link">
+                                            <svg class="social-icons__icon">
+                                                <use href="./img/icon/sprite.svg#instagram"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
-                            <figcaption>
-                                <p class="name"><a href="#">Michael Fertig</a></p>
-                                <p class="profession"><a href="#">Developer</a></p>
+                            <figcaption class="worker__figcn">
+                                <p class="prg worker__name"><a href="#" class="link worker__link--name">Michael Fertig</a></p>
+                                <p class="prg worker__profession"><a href="#" class="link worker__link--profession">Developer</a></p>
                             </figcaption>
                         </figure>
                     </li>
                 </ul>
         </section>
     </main>
-    <footer class="container">
+    <footer class="container footer">
         <div class="copyright">
-            <span>&#169; 2016 MoGo free PSD template by</span>
-            <address>Laaqiq</address>
+            <span class="copyright__info">&#169; 2016 MoGo free PSD template by</span>
+            <a href="#" class="copyrigh__link"><address class="copyright__adrs">Laaqiq</address></a>
         </div>
-        <form action="#">
-            <input type="email" placeholder="   Your Email..." name="email">
-            <button type="submit">subscribe</button>
+        <form action="#" class="footer-form">
+            <input class="footer-form__email" type="email" placeholder="   Your Email..." name="email">
+            <button class="button footer-form__btn" type="submit">subscribe</button>
         </form>
     </footer>
 </body>
