--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -114,7 +114,13 @@
                         <figure class="worker__fgr">
                             <div class="worker__box">
                                 <a href="#" class="link worker__link">
-                                    <img src="./img/portfolio/dix.jpg" class="worker__img" alt="Matthew Dix" width="380px" height="470px">
+                                    <img 
+                                    srcset="./img/portfolio/dix.jpg 380w, ./img/portfolio/dix@2x.jpg 760w" 
+                                    sizes="380px" 
+                                    src="./img/portfolio/dix.jpg" 
+                                    class="worker__img" 
+                                    alt="Matthew Dix" 
+                                    height="470">
                                 </a>
                                 <ul class="list social-icons">
                                     <li class="item social-icons__item">
@@ -157,7 +163,13 @@
                         <figure class="worker__fgr">
                             <div class="worker__box">
                                 <a href="#" class="link worker__link">
-                                    <img src="./img/portfolio/campbell.jpg" class="worker__img" alt="Christopher Campbell" width="380px" height="470px">
+                                    <img 
+                                    srcset="./img/portfolio/campbell.jpg 380w, ./img/portfolio/campbell@2x.jpg 760w" 
+                                    sizes="380px" 
+                                    src="./img/portfolio/campbell.jpg" 
+                                    class="worker__img" 
+                                    alt="Christopher Campbell" 
+                                    height="470">
                                 </a>
                                 <ul class="list social-icons">
                                     <li class="item social-icons__item">
@@ -200,7 +212,13 @@
                         <figure class="worker__fgr">
                             <div class="worker__box">
                                 <a href="#" class="link worker__link">
-                                    <img src="./img/portfolio/fertig.jpg" class="worker__img" alt="Michael Fertig" width="380px" height="470px">
+                                    <img 
+                                    srcset="./img/portfolio/fertig.jpg 380w, ./img/portfolio/fertig@2x.jpg 760w" 
+                                    sizes="380px" 
+                                    src="./img/portfolio/fertig.jpg" 
+                                    class="worker__img" 
+                                    alt="Michael Fertig" 
+                                    height="470">
                                 </a>
                                 <ul class="list social-icons">
                                     <li class="item social-icons__item">
