Made mobille adaptive

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -14,7 +14,8 @@
         <header class="container page-header">
             <nav class="page-nav">
                 <a href="#" class="link site-logo" title="This is site logotype">MoGo</a>
-                <ul class="list site-navigation">
+                <div class="menu-burger" id="menuBurger"><span class="menu-burger--clr">&#9776;</span></div>
+                <ul class="list site-navigation" id="siteNav">
                     <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">about</a></li>
                     <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">service</a></li>
                     <li class="item site-navigation__item"><a href="" class="link site-navigation__link site-navigation__link--big">work</a></li>
@@ -271,4 +272,5 @@
         </form>
     </footer>
 </body>
+<script src="./scripts/menu-burger.js"></script>
 </html>
